--- a/admin_index.html
+++ b/admin_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>管理员首页</title>
-    javascript
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 
