--- a/admin_login.html
+++ b/admin_login.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>管理员登录/注册</title>
+    <link rel="icon" type="image/x-icon" href="images/admin.ico"/>
     <link rel="stylesheet" type="text/css" href="layui/css/layui.css" />
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="layui/layui.js"></script>
 </head>
-<body>
+<body onload='createCode()'>
 <div class="admin">
     <div class="layui-main">
         <div class="admin_entry" id="admin_entry">   <!-- 登录 -->
@@ -15,13 +16,26 @@
             <div class="admin_entry_cont">
                 <div class="layui-form-item">
                     <div class="layui-input-inline">
-                        <input id="ey_name" type="text" name="title" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                        <input id="ey_name" type="text" name="title" placeholder="请输入用户名" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-input-inline">
-                        <input id="ey_pswd" type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                        <input id="ey_pswd" type="password" name="password" placeholder="请输入密码" class="layui-input">
                     </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-input-inline">
+                        <input id="ey_code" type="text" name="title" placeholder="验证码" class="layui-input" style="width: 150px">
+                    </div>
+                    <div id="code_ok">
+                        <img src="images/ok.png" alt="" height="45px" width="45px"/>
+                    </div>
+                    <div id="code_no">
+                        <img src="images/no.png" alt="" height="45px" width="45px"/>
+                    </div>
+                    <input type="button" id="code" onclick="createCode()" title='点击更换验证码' value="">
+                    <!--<button id="code" title='点击更换验证码'>登录</button>-->
                 </div>
                 <div class="layui-form-item">
                     <button id="entry" class="layui-btn">登录</button>
@@ -31,26 +45,28 @@
                 </div>
             </div>
         </div>
+
         <div class="icon">
             <img src="images/admin_icon.png" width="100%" height="100%">
         </div>
+
         <div class="admin_enroll" id="admin_enroll">   <!-- 注册 -->
             <div class="admin_enroll_title">管理员注册</div>
             <div class="admin_enroll_cont">
                 <div class="layui-form-item">
                     <div class="layui-input-inline">
-                        <input id="rl_name" type="text" name="title" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                        <input id="rl_name" type="text" name="title" placeholder="请输入用户名" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-input-inline">
-                        <input id="el_pwdo" type="password" name="password" required lay-verify="required" placeholder="第一次输入密码" autocomplete="off" class="layui-input">
+                        <input id="el_pwdo" type="password" name="password" placeholder="第一次输入密码" class="layui-input">
                     </div>
                     <div id="prompto" class="layui-form-mid layui-word-aux"></div>
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-input-inline">
-                        <input id="el_pwdt" type="password" name="password" required lay-verify="required" placeholder="请重复输入密码" autocomplete="off" class="layui-input">
+                        <input id="el_pwdt" type="password" name="password" placeholder="请重复输入密码" class="layui-input">
                     </div>
                     <div id="promptt" class="layui-form-mid layui-word-aux"></div>
                 </div>
@@ -99,6 +115,27 @@
         height: 220px;
         padding: 20px;
         position: inherit;
+    }
+    #code_ok,#code_no{
+        width: 45px;
+        height: 25px;
+        float: left;
+        position: absolute;
+        left: 170px;
+    }
+    #code{
+        width:150px;
+        height: 45px;
+        font-family: "Adobe 黑体 Std R";
+        font-style:italic;
+        font-size: 30px;
+        color:green;
+        border:0;
+        /*padding:2px 3px;*/
+        letter-spacing:5px;
+        font-weight:bolder;
+        position: absolute;
+        left: 220px;
     }
 
     .layui-input{
@@ -150,8 +187,67 @@
     }
 </style>
 <script type="text/javascript">
+    var code ; //在全局定义验证码
+    function createCode(){
+        code = "";
+        var codeLength = 4;//验证码的长度
+        // $("#code").text("");
+        var checkCode = document.getElementById("code");
+        checkCode.value = "";//把code值赋给验证码
+        var random = new Array(0,1,2,3,4,5,6,7,8,9,'A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R',
+            'S','T','U','V','W','X','Y','Z');//随机数
+        for(var i = 0; i < codeLength; i++) {//循环操作
+            var index = Math.floor(Math.random()*36);//取得随机数的索引（0~35）
+            code += random[index];//根据索引取得随机数加到code上
+        }
+        checkCode.value = code;//把code值赋给验证码
+        // $("#code").text(code);
+    }
+    // $("#code").click(function(){// 注册按钮
+    //     alert("");
+    //     code = "";
+    //     var codeLength = 4;//验证码的长度
+    //     // $("#code").val("");
+    //     var checkCode = document.getElementById("code");
+    //     checkCode.value = "";//把code值赋给验证码
+    //     var random = new Array(0,1,2,3,4,5,6,7,8,9,'A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R',
+    //         'S','T','U','V','W','X','Y','Z');//随机数
+    //     for(var i = 0; i < codeLength; i++) {//循环操作
+    //         var index = Math.floor(Math.random()*36);//取得随机数的索引（0~35）
+    //         code += random[index];//根据索引取得随机数加到code上
+    //     }
+    //     checkCode.value = code;//把code值赋给验证码
+    //     // $("#code").val("111");
+    // }
+    $("#ey_code").on('input propertychange',function () {// 校验密码位数
+        var ey_code = $("#ey_code").val().toUpperCase();
+        if(ey_code != code){
+            $("#code_ok").hide();//隐藏OKdiv
+            $("#code_no").show();//显示NOdiv
+        }else{
+            $("#code_ok").show();//显示OKdiv
+            $("#code_no").hide();//隐藏NOdiv
+        }
+    });
+    // function validate(){// 校验验证码
+    //     var inputCode = document.getElementById("input").value.toUpperCase(); //取得输入的验证码并转化为大写
+    //     if(inputCode.length <= 0) { //若输入的验证码长度为0
+    //         alert("请输入验证码！"); //则弹出请输入验证码
+    //     }else if(inputCode != code ) { //若输入的验证码与产生的验证码不一致时
+    //         alert("验证码输入错误！@_@"); //则弹出验证码输入错误
+    //         createCode();//刷新验证码
+    //         document.getElementById("input").value = "";//清空文本框
+    //     }else { //输入正确时
+    //         alert("合格！^-^");
+    //     }
+    // }
+</script>
+<script type="text/javascript">
     $(document).ready(function(){
+
         $("#admin_enroll").hide();//隐藏注册div
+        $("#code_ok").hide();//隐藏OKdiv
+        $("#code_no").hide();//隐藏NOdiv
 
         $("#entry").click(function() {// 登录按钮（校验账号密码输入是否为空）
             var ey_name = $("#ey_name").val();
