--- a/admin_index.html
+++ b/admin_index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>管理员首页</title>
+    <link rel="icon" type="image/x-icon" href="images/admin.ico"/>
     <link rel="stylesheet" type="text/css" href="layui/css/layui.css" />
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="layui/layui.js"></script>
@@ -68,7 +69,6 @@
     </div>
 
     <div class="layui-body">
-        <!-- 内容主体区域 -->
         <div style="padding: 15px;">内容主体区域</div>
     </div>
 
@@ -78,12 +78,5 @@
     </div>
 </div>
 <script src="../src/layui.js"></script>
-<script>
-    //JavaScript代码区域
-    layui.use('element', function(){
-        var element = layui.element;
-
-    });
-</script>
 </body>
 </html>
