--- a/admin_login.html
+++ b/admin_login.html
@@ -8,7 +8,7 @@
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="layui/layui.js"></script>
 </head>
-<body  >
+<body>
 <div class="admin">
     <div class="layui-main">
         <div class="admin_entry" id="admin_entry">   <!-- 登录 -->
@@ -186,18 +186,18 @@
     }
 </style>
 <script type="text/javascript">
-    $('#code').trigger("click");
     $(document).ready(function () {
+        createCode();// 第一次运行显示验证码
 
         $("#admin_enroll").hide();//隐藏注册div
         $("#code_ok").hide();//隐藏OKdiv
         $("#code_no").hide();//隐藏NOdiv
-        // $('#code').trigger("click");
 
         var code=""; //在全局定义验证码
-        var codeLength = 4;//验证码的长度
-        $("#code").click(function (){// 刷新验证码
+
+        function createCode() {
             code="";
+            var codeLength = 4;//验证码的长度
             $("#code").attr({
                 "value": ""
             });
@@ -210,22 +210,26 @@
             $("#code").attr({
                 "value": code
             });
+        }
+
+        $("#code").click(function (){// 刷新验证码
+            createCode();
         });
 
         $("#ey_code").on('input propertychange', function () {// 校验密码位数
             var ey_code = $("#ey_code").val().toUpperCase();
-            if (ey_code != code) {
+            if (ey_code != code && ey_code.length>3) {
                 $("#code_ok").hide();//隐藏OKdiv
                 $("#code_no").show();//显示NOdiv
-            } else {
+            } else if (ey_code == code && ey_code.length>3){
                 $("#code_ok").show();//显示OKdiv
                 $("#code_no").hide();//隐藏NOdiv
             }
         });
 
         $("#entry").click(function () {// 登录按钮（校验账号密码输入是否为空）
-            var ey_name = $("#ey_name").val();
-            var ey_pswd = $("#ey_pswd").val();
+            var ey_name = $("#ey_name").val();// 获取用户名
+            var ey_pswd = $("#ey_pswd").val();// 获取密码
             if (ey_name.length > 0 && ey_pswd.length > 0) {
                 // $("#prompt").html("<b style='color: red'>两次密码输入不一致！</b>");
             } else {
@@ -240,12 +244,13 @@
         });
 
         $("#enroll").click(function () {// 注册按钮
-            var rl_name = $("#rl_name").val();
-            var el_pwdo = $("#el_pwdo").val();
-            var el_pwdt = $("#el_pwdt").val();
+            var rl_name = $("#rl_name").val();// 获取用户名
+            var el_pwdo = $("#el_pwdo").val();// 第一次密码
+            var el_pwdt = $("#el_pwdt").val();// 第二次密码
 
-            if (el_pwdo != el_pwdt) {//（校验两次密码输入一致）
+            if (el_pwdo != el_pwdt) {//（校验两次密码输入不一致）
                 $("#promptt").html("<b style='color: red'>两次密码输入不一致！</b>");
+                return;
             } else {
                 $("#promptt").html("");
             }
