验证码输入错也能登录问题
加入验证码登录时校验
后台首页显示表格定位完成

--- a/Test.html
+++ b/Test.html
@@ -69,12 +69,14 @@
     </div>
 
     <div class="layui-body">
-        <table class="layui-hide" id="test" lay-filter="demo"></table>
-        <script type="text/html" id="barDemo">
-            <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
-            <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-        </script>
+        <div class="show">
+            <table class="layui-hide" id="test" lay-filter="demo"></table>
+            <script type="text/html" id="barDemo">
+                <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
+                <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+            </script>
+        </div>
         <!--<div style="padding: 15px;">内容主体区域</div>-->
     </div>
 
@@ -84,16 +86,15 @@
     </div>
 </div>
 <style>
-    .layui-body,.layui-hide{
-        margin: 0px;
-    }
-    .layui-hide{
+    /*.layui-body,.layui-hide{*/
+        /*margin: 0px;*/
+    /*}*/
+    .show{
         width: 100%;
         height: 500px;
         position: absolute;
-        top: -5px;
+        top: -10px;
     }
-    /*.demo-carousel{height: 200px; line-height: 200px; text-align: center;}*/
 </style>
 <script>
     layui.config({
