--- a/admin_index.html
+++ b/admin_index.html
@@ -69,7 +69,15 @@
     </div>
 
     <div class="layui-body">
-        <div style="padding: 15px;">内容主体区域</div>
+        <div class="show">
+            <table class="layui-hide" id="test" lay-filter="demo"></table>
+            <script type="text/html" id="barDemo">
+                <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
+                <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+            </script>
+        </div>
+        <!--<div style="padding: 15px;">内容主体区域</div>-->
     </div>
 
     <div class="layui-footer">
@@ -77,6 +85,63 @@
         © layui.com - 底部固定区域
     </div>
 </div>
-<script src="../src/layui.js"></script>
 </body>
+<style>
+    .show{
+        width: 100%;
+        height: 500px;
+        position: absolute;
+        top: -10px;
+    }
+</style>
+<script>
+    layui.config({
+        version: '1520760931738' //为了更新 js 缓存，可忽略
+    });
+
+    layui.use([ 'table'], function(){
+        table = layui.table //表格
+
+        //向世界问个好
+        layer.msg('Hello World');
+
+        //执行一个 table 实例
+        table.render({
+            elem: '#test'
+            ,height: 332
+            ,url: 'http://www.layui.com/demo/table/user/' //数据接口
+            ,page: true //开启分页
+            ,cols: [[ //表头
+                {field: 'id', title: 'ID', width:80, sort: true, fixed: 'left'}
+                ,{field: 'username', title: '用户名', width:80}
+                ,{field: 'sex', title: '性别', width:80, sort: true}
+                ,{field: 'city', title: '城市', width:80}
+                ,{field: 'sign', title: '签名', width: 170}
+                ,{field: 'experience', title: '积分', width: 80, sort: true}
+                ,{field: 'score', title: '评分', width: 80, sort: true}
+                ,{field: 'classify', title: '职业', width: 80}
+                ,{field: 'wealth', title: '财富', width: 135, sort: true}
+                ,{fixed: 'right', width: 165, align:'center', toolbar: '#barDemo'}
+            ]]
+        });
+
+        //监听工具条
+        table.on('tool(demo)', function(obj){ //注：tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
+            var data = obj.data //获得当前行数据
+                ,layEvent = obj.event; //获得 lay-event 对应的值
+            if(layEvent === 'detail'){
+                layer.msg('查看操作');
+            } else if(layEvent === 'del'){
+                layer.confirm('真的删除行么', function(index){
+                    obj.del(); //删除对应行（tr）的DOM结构
+                    layer.close(index);
+                    //向服务端发送删除指令
+                });
+            } else if(layEvent === 'edit'){
+                layer.msg('编辑操作');
+            }
+        });
+
+    });
+</script>
 </html>
