--- a/admin_login.html
+++ b/admin_login.html
@@ -194,6 +194,7 @@
         $("#code_no").hide();//隐藏NOdiv
 
         var code=""; //在全局定义验证码
+        var flag=false;
 
         function createCode() {
             code="";
@@ -219,9 +220,11 @@
         $("#ey_code").on('input propertychange', function () {// 校验密码位数
             var ey_code = $("#ey_code").val().toUpperCase();
             if (ey_code != code && ey_code.length>3) {
+                flag=false;
                 $("#code_ok").hide();//隐藏OKdiv
                 $("#code_no").show();//显示NOdiv
             } else if (ey_code == code && ey_code.length>3){
+                flag=true;
                 $("#code_ok").show();//显示OKdiv
                 $("#code_no").hide();//隐藏NOdiv
             }
@@ -230,8 +233,16 @@
         $("#entry").click(function () {// 登录按钮（校验账号密码输入是否为空）
             var ey_name = $("#ey_name").val();// 获取用户名
             var ey_pswd = $("#ey_pswd").val();// 获取密码
-            if (ey_name.length > 0 && ey_pswd.length > 0) {
+            if (ey_name.length > 0 && ey_pswd.length > 0 && flag) {
                 // $("#prompt").html("<b style='color: red'>两次密码输入不一致！</b>");
+            } else if(!flag){
+                layui.use('layer', function () {
+                    var layer = layui.layer;
+                    layer.open({
+                        title: '警告'
+                        , content: '验证码不正确！'
+                    });
+                });
             } else {
                 layui.use('layer', function () {
                     var layer = layui.layer;
