--- a/Test/邮箱服务验证.html
+++ b/Test/邮箱服务验证.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>管理员首页</title>
-    <link rel="stylesheet" type="text/css" href="layui/css/layui.css" />
-    <script src="js/jquery-3.3.1.min.js"></script>
+    <title>邮箱服务验证</title>
+    <link rel="stylesheet" type="text/css" href="../layui/css/layui.css" />
+    <script src="../js/jquery-3.3.1.min.js"></script>
 </head>
 <div class="layui-form-item">
     <button id="testone" class="layui-btn">测试</button>
