--- a/Test/Test.html
+++ b/Test/Test.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>管理员首页</title>
-    <link rel="icon" type="image/x-icon" href="images/admin.ico"/>
-    <link rel="stylesheet" type="text/css" href="layui/css/layui.css" />
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="layui/layui.js?t=1520760931738"></script>
+    <link rel="icon" type="image/x-icon" href="../images/admin.ico"/>
+    <link rel="stylesheet" type="text/css" href="../layui/css/layui.css" />
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../layui/layui.js?t=1520760931738"></script>
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
