--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>管理员首页</title>
-    <link rel="icon" type="image/x-icon" href="images/admin.ico"/>
-    <link rel="stylesheet" type="text/css" href="layui/css/layui.css" />
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="layui/layui.js"></script>
+    <link rel="icon" type="image/x-icon" href="../images/admin.png"/>
+    <link rel="stylesheet" type="text/css" href="../layui/css/layui.css" />
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../layui/layui.js"></script>
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
@@ -108,19 +108,16 @@
         //执行一个 table 实例
         table.render({
             elem: '#test'
-            ,height: 332
-            ,url: 'http://www.layui.com/demo/table/user/' //数据接口
+            ,height: 500
+            ,url: 'http://localhost:8080/Bibased/article/list/' //数据接口
             ,page: true //开启分页
             ,cols: [[ //表头
-                {field: 'id', title: 'ID', width:80, sort: true, fixed: 'left'},
-                {field: 'username', title: '用户名', width:80},
-                {field: 'sex', title: '性别', width:80, sort: true},
-                {field: 'city', title: '城市', width:80},
-                {field: 'sign', title: '签名', width: 170},
-                {field: 'experience', title: '积分', width: 80, sort: true},
-                {field: 'score', title: '评分', width: 80, sort: true},
-                {field: 'classify', title: '职业', width: 80},
-                {field: 'wealth', title: '财富', width: 135, sort: true},
+                {field: 'aieid', title: '文章ID', width:100, sort: true, fixed: 'left'},
+                {field: 'aietitle', title: '文章标题', width:220},
+                {field: 'aiesort', title: '文章分类', width:120, sort: true},
+                {field: 'aietime', title: '发布时间', width:180, sort: true},
+                {field: 'aiestate', title: '文章状态', width: 100},
+                {field: 'urname', title: '发布用户', width: 120, sort: true},
                 {fixed: 'right', width: 165, align:'center', toolbar: '#barDemo'}
             ]]
         });
