--- a/admin/admin_login.html
+++ b/admin/admin_login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>管理员登录/注册</title>
-    <link rel="icon" type="image/x-icon" href="images/admin.ico"/>
-    <link rel="stylesheet" type="text/css" href="layui/css/layui.css" />
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="layui/layui.js"></script>
+    <link rel="icon" type="image/x-icon" href="../images/admin.png"/>
+    <link rel="stylesheet" type="text/css" href="../layui/css/layui.css" />
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../layui/layui.js"></script>
 </head>
 <body>
 <div class="admin">
@@ -29,10 +29,10 @@
                         <input id="ey_code" type="text" name="title" placeholder="验证码" class="layui-input" style="width: 150px">
                     </div>
                     <div id="code_ok">
-                        <img src="images/ok.png" alt="" height="45px" width="45px"/>
+                        <img src="../images/ok.png" alt="" height="45px" width="45px"/>
                     </div>
                     <div id="code_no">
-                        <img src="images/no.png" alt="" height="45px" width="45px"/>
+                        <img src="../images/no.png" alt="" height="45px" width="45px"/>
                     </div>
                     <input type="button" id="code" title='点击更换验证码' value="">
                 </div>
@@ -46,7 +46,7 @@
         </div>
 
         <div class="icon">
-            <img src="images/admin_icon.png" width="100%" height="100%">
+            <img src="../images/admin_icon.png" width="100%" height="100%">
         </div>
 
         <div class="admin_enroll" id="admin_enroll">   <!-- 注册 -->
