--- a/phuser/phuser_index.html
+++ b/phuser/phuser_index.html
@@ -36,22 +36,8 @@
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
-                <li class="layui-nav-item layui-nav-itemed">
-                    <a class="" href="javascript:;">已发布文章</a>
-                    <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">列表一</a></dd>
-                        <dd><a href="javascript:;">列表二</a></dd>
-                        <dd><a href="javascript:;">列表三</a></dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item">
-                    <a href="javascript:;">待审核文章</a>
-                    <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">列表一</a></dd>
-                        <dd><a href="javascript:;">列表二</a></dd>
-                        <dd><a href="">超链接</a></dd>
-                    </dl>
-                </li>
+                <li class="layui-nav-item"><a href="">已发布文章</a></li>
+                <li class="layui-nav-item"><a href="">待审核文章</a></li>
                 <li class="layui-nav-item"><a href="">已驳回文章</a></li>
             </ul>
         </div>
@@ -105,8 +91,8 @@
                 {field: 'aietitle', title: '文章标题', width:220},
                 {field: 'aiesort', title: '文章分类', width:120, sort: true},
                 {field: 'aietime', title: '发布时间', width:180, sort: true},
-                {field: 'aiestate', title: '文章状态', width: 100},
-                {field: 'urname', title: '发布用户', width: 120, sort: true},
+                {field: 'aiestate', title: '*******', width: 100},
+                {field: 'urname', title: '*******', width: 120},
                 {fixed: 'right', width: 165, align:'center', toolbar: '#barDemo'}
             ]]
         });
