--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -5,8 +5,8 @@
     <title>管理员首页</title>
     <link rel="icon" type="image/x-icon" href="../images/admin.png"/>
     <link rel="stylesheet" type="text/css" href="../layui/css/layui.css" />
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../layui/layui.js"></script>
+    <!--<script src="../js/jquery-3.3.1.min.js"></script>-->
+    <!--<script src="../layui/layui.js"></script>-->
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
@@ -85,6 +85,9 @@
         © layui.com - 底部固定区域
     </div>
 </div>
+<script src="../js/jquery-3.3.1.min.js"></script>
+<!--<script src="../layui/layui.js" charset="utf-8"></script>-->
+<script src="../layui/layui.all.js" charset="utf-8"></script>
 </body>
 <style>
     .show{
