--- a/phuser/phuser_index.html
+++ b/phuser/phuser_index.html
@@ -5,8 +5,6 @@
     <title>发布人首页</title>
     <link rel="icon" type="image/x-icon" href="../images/admin.png"/>
     <link rel="stylesheet" type="text/css" href="../layui/css/layui.css" />
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../layui/layui.js"></script>
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
@@ -15,7 +13,6 @@
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="">控制台</a></li>
-            <li class="layui-nav-item"><a href="">用户</a></li>
         </ul>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
@@ -36,9 +33,10 @@
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
-                <li class="layui-nav-item"><a href="">已发布文章</a></li>
                 <li class="layui-nav-item"><a href="">待审核文章</a></li>
                 <li class="layui-nav-item"><a href="">已驳回文章</a></li>
+                <li class="layui-nav-item"><a href="">已发布文章</a></li>
+                <li class="layui-nav-item"><a href="">要发布文章</a></li>
             </ul>
         </div>
     </div>
@@ -60,6 +58,10 @@
         © layui.com - 底部固定区域
     </div>
 </div>
+
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../layui/layui.all.js"></script>
+
 </body>
 <style>
     .show{
