--- a/user/user_index.html
+++ b/user/user_index.html
@@ -5,10 +5,10 @@
     <title>每日一报</title>
     <link rel="icon" type="image/x-icon" href="../images/earth.png"/>
     <link rel="stylesheet" type="text/css" href="../layui/css/layui.css" />
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../layui/layui.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/user_index.css" />
 </head>
 <body>
+<!--首页头部-->
 <div class="index_header">
     <div class="header_left">
         <div class="header_left_icon">
@@ -40,137 +40,25 @@
         <span class="header_right_about">关于我们</span>
     </div>
 </div>
+<!--文章展示列表-->
+<div class="index_content">
+    <ul class="flow-default" id="LAY_demo1"></ul>
+</div>
+
 <div id="user_so"></div>
 </body>
+
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../layui/layui.js"></script>
+<script src="../js/user_index.js"></script>
+
 <style>
-    body{
-        margin: 0;
-        padding: 0;
-    }
-    .index_header {
-        width: 100%;
-        height: 60px;
-        position: relative;
-        margin: 0 auto;
-        /*min-width: 1190px;*/
-        /*max-width: 1400px;*/
-        background-color: #000;
-    }
-    .header_left{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 360px;
-        height: 100%;
-        border-right: 1px solid #4d4d4d;
-    }
-    .header_left_icon{
-        width: 56px;
-        height: 56px;
-        margin: 2px 0px 2px 40px;
+    #test{
+        width: 246px;
+        height: 280px;
+        margin: 4px 4px;
+        background-color: #66ccff;
         float: left;
-    }
-    .header_left_title{
-        width: 184px;
-        height: 36px;
-        margin: 12px 10px 12px 40px;
-        font-size: 24px;
-        line-height: 36px;
-        font-family: "叶根友毛笔行书2.0版";
-        color: white;
-        float: left;
-    }
-    .header_center{
-        height: 60px;
-        margin: 0px 0px 0px 360px;
-        box-sizing: border-box;
-        float: left;
-    }
-    ul{
-        list-style:none;
-    }
-    li{
-        display: list-item;
-        text-align: -webkit-match-parent;
-    }
-    .cate{
-        height: 60px;
-        margin-left: 20px;
-        font-size: 16px;
-        color: #777777;
-        float: left;
-        line-height: 60px;
-    }
-    .header_right{
-        width: 400px;
-        height: 60px;
-        float: right;
-        border-left: 1px solid #4d4d4d;
-    }
-    .header_right_app{
-        width: 60px;
-        height: 60px;
-        font-size: 14px;
-        line-height: 60px;
-        text-align: center;
-        color: white;
-        float: left;
-        border-right: 1px solid #4d4d4d;
-    }
-    .header_right_so{
-        width: 50px;
-        height: 60px;
-        font-size: 14px;
-        line-height: 60px;
-        text-align: center;
-        color: white;
-        float: left;
-        border-right: 1px solid #4d4d4d;
-    }
-    .user_msg{
-        width: 180px;
-        height: 60px;
-        float: left;
-    }
-    .user_img{
-        width: 36px;
-        height: 36px;
-        margin: 12px;
-        float: left;
-    }
-    .user_name{
-        width: 80px;
-        height: 60px;
-        font-size: 14px;
-        line-height: 60px;
-        text-align: center;
-        color: white;
-        float: left;
-        overflow: hidden;
-    }
-    .user_logout{
-        width: 40px;
-    }
-    .header_right_about{
-        width: 80px;
-    }
-    .user_logout,.header_right_about{
-        height: 60px;
-        font-size: 14px;
-        line-height: 60px;
-        text-align: center;
-        color: white;
-        float: left;
-    }
-    #user_so{
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgba(99,99,99,0.6);
-        z-index: 99999;
     }
 </style>
 <script type="text/javascript">
@@ -178,23 +66,30 @@
         alert(this.val())
     });
 
-    $("#header_left_title,.user_name,.user_logout,.header_right_about").on({
-        mouseover : function(){
-            $(this).css("color","#ffc81f");
-        },mouseout : function(){
-            $(this).css("color","white");
-        }
-    }) ;
+    layui.use('flow', function() {
+        var flow = layui.flow;
 
-    $(".cate").on({
-        mouseover : function(){
-            $(this).css("color","#ffc81f");
-        },mouseout : function(){
-            $(this).css("color","#777777");
-        }
-    }) ;
-    $(".user_so").click(function (){
-        $("#user_so").css("display","block");
+        flow.load({
+            elem: '#LAY_demo1' //流加载容器
+            , scrollElem: '#LAY_demo1' //滚动条所在元素，一般不用填，此处只是演示需要。
+            , isAuto: false
+            , isLazyimg: true
+            , done: function (page, next) { //执行下一页的回调
+                //模拟数据插入
+                setTimeout(function () {
+                    console.log(page,next)
+                    var lis = [];
+                    for (var i = 0; i < 4; i++) {
+                        // lis.push('<li>' + ((page - 1) * 10 + i + 1) + '</li>')
+                        lis.push("<li id='test'>测试文件数据" + ((page - 1) * 4 + i + 1) + "</li>")
+                    }
+                    //执行下一页渲染，第二参数为：满足“加载更多”的条件，即后面仍有分页
+                    //pages为Ajax返回的总页数，只有当前页小于总页数的情况下，才会继续出现加载更多
+                    // next(lis.join(''), page < 6); //假设总页数为 6
+                    next(lis.join('')); //假设总页数为 6
+                }, 500);
+            }
+        });
     });
 </script>
 </html>
